<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="mw.technologies3g.ratedrentalsmalawi.activities.ui.fragments.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add_properties"
        android:name="mw.technologies3g.ratedrentalsmalawi.activities.ui.fragments.AddPropertiesFragment"
        android:label="@string/title_my_properties"
        tools:layout="@layout/fragment_add_properties" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="mw.technologies3g.ratedrentalsmalawi.activities.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>