<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.activities.InstructionsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_instructions_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottom_nav_background_gradient"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/txt_view_instructions_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/register_toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="@dimen/register_toolbar_title_textSize" />

    </androidx.appcompat.widget.Toolbar>

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_edit_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_background"
        android:text="@string/how_to_edit_profile_title"
        android:textColor="@color/white" />

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_add_rental_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_background"
        android:text="@string/how_to_add_rental_property_title"
        android:textColor="@color/white" />

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_delete_rental_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_background"
        android:text="@string/how_to_delete_rental_property_title"
        android:textColor="@color/white" />

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_refresh_a_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="290dp"
        android:background="@drawable/button_background"
        android:text="@string/how_to_refresh_page_title"
        android:textColor="@color/white" />

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_view_rental_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/button_background"
        android:text="@string/how_to_view_rental_property_title"
        android:textColor="@color/white" />

    <mw.technologies3g.ratedrentalsmalawi.utils.RRButton
        android:id="@+id/button_how_to_contact_property_owners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/button_background"
        android:text="@string/button_how_to_contact_property_owners"
        android:textColor="@color/white" />
</RelativeLayout>