<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.activities.DevelopersInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_developers_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bottom_nav_background_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/txt_view_developer_info_page_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/register_toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/dev_info"
            android:textColor="@color/white"
            android:textSize="@dimen/register_toolbar_title_textSize"
            />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_developers_activity">


        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_terms_condition_marginStart"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/name"/>

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTextView
            android:id="@+id/tv_ts_and_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/register_hint_color"
            android:text="@string/my_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_name">


        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_terms_condition_marginStart"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/position"/>

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTextView
            android:id="@+id/post_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/register_hint_color"
            android:text="@string/post"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_post">


        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_terms_condition_marginStart"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/email_pos"/>

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTextView
            android:id="@+id/act_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textColor="@color/register_page_color"
            android:text="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_email">


        <mw.technologies3g.ratedrentalsmalawi.utils.RRTexViewBold
            android:id="@+id/linked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_terms_condition_marginStart"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/Linked"/>

        <mw.technologies3g.ratedrentalsmalawi.utils.RRTextView
            android:id="@+id/act_linked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:textColor="@color/register_page_color"
            android:text="@string/LinkedIn"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>